カウンター_計算機完成

--- a/1_workspace/1/カウンター/index.html
+++ b/1_workspace/1/カウンター/index.html
@@ -2,3 +2,41 @@
   1. "!"と入力して、tabキーを押し、HTMLの雛形を作成する。
   2. script要素でmain.jsを読み込む。
 -->
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div>
+      <h2 id="display">0</h2>
+    </div>
+    <button id="plus-button">+1</button>
+    <button id="multiple-button">*2</button>
+    <button id="minus-button">-1</button>
+
+    <hr />
+
+    <div>
+      <h2 id="display_result">0</h2>
+    </div>
+    <div>
+      <button id="button_1">1</button>
+      <button id="button_2">2</button>
+    </div>
+    <div>
+      <button id="button_plus">+</button>
+      <button id="button_multiple">×</button>
+    </div>
+    <div>
+      <button id="button_equal">=</button>
+    </div>
+    <div>
+      <button id="button_clear">Clear</button>
+    </div>
+  </body>
+
+  <script src="main.js"></script>
+</html>
