--- a/1_workspace/2/トレロ１/index.html
+++ b/1_workspace/2/トレロ１/index.html
@@ -11,12 +11,15 @@
     <header>
       <div class="header-title">Trello?</div>
     </header>
-    
+
     <div class="main-container">
-      <div class="list-container">
+      <div>
+        <button id="add-list-button">Add List</button>
+      </div>
+      <!-- <div class="list-container">
         <div class="list-header">ギークサロン</div>
         <div class="cards-container" id="cards-container">
-          <!-- ここにカードを追加する -->
+          
         </div>
         <div class="list-footer">
           <div class="input-container">
@@ -52,7 +55,7 @@
           </div>
         </div>
         <div class="list-footer">＋カードを追加</div>
-      </div>
+      </div> -->
     </div>
     <script src="main.js"></script>
   </body>
