DogAPI_TheCatAPIで『Breeds取得→3つランダム表示→選択した猫の画像を表示』_完成

--- a/1_workspace/2/犬/index.html
+++ b/1_workspace/2/犬/index.html
@@ -5,11 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DogAPI</title>
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <h2>ワンちゃんの登場です！</h2>
     <div>
       <img src="" alt="おねんね中" id="dog-image" />
+    </div>
+    <div>
+      <button id="reload">🐶 チェンジ 🐶</button>
+    </div>
+    <hr />
+    <h2>Which do you like ?</h2>
+    <div>
+      <ul>
+        <li class="cat-select">cat_1</li>
+        <li class="cat-select">cat_2</li>
+        <li class="cat-select">cat_3</li>
+        <br />
+        <button id="nope">🐱 N O P E 🐱</button>
+      </ul>
+    </div>
+    <div>
+      <img src="" alt="[NO CAT SELECTED]" id="cat-image" />
     </div>
 
     <script src="main.js"></script>
