DogAPI_URL短縮水産🐟-Web_完成

--- a/1_workspace/2/犬/index.html
+++ b/1_workspace/2/犬/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <h2>ワンちゃんの登場です！</h2>
+    <h2>【ワンちゃんの登場です！】</h2>
     <div>
       <img src="" alt="おねんね中" id="dog-image" />
     </div>
@@ -16,20 +16,32 @@
       <button id="reload">🐶 チェンジ 🐶</button>
     </div>
     <hr />
-    <h2>Which do you like ?</h2>
+    <h2>【Which cat do you like ?】</h2>
+    <button id="nope">🐱 N O P E 🐱</button>
     <div>
       <ul>
         <li class="cat-select">cat_1</li>
         <li class="cat-select">cat_2</li>
         <li class="cat-select">cat_3</li>
         <br />
-        <button id="nope">🐱 N O P E 🐱</button>
       </ul>
     </div>
     <div>
       <img src="" alt="[NO CAT SELECTED]" id="cat-image" />
     </div>
 
+    <hr />
+    <h2>【短縮水産🐟_Web】</h2>
+    <p>Powerd by Bitly</p>
+    <br />
+    <div>
+      <p>↓ 短縮したいURLを貼り付け🐟</p>
+      <input type="text" id="input-url" /><button id="go-button">Go</button>
+    </div>
+    <br />
+    <div>
+      <input type="text" id="output-url" readonly /><span> ← 短縮後🐟🐠🐡</span>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
