--- a/1_workspace/2/犬/index.html
+++ b/1_workspace/2/犬/index.html
@@ -27,7 +27,7 @@
       </ul>
     </div>
     <div>
-      <img src="" alt="[NO CAT SELECTED]" id="cat-image" />
+      <img src="" alt="[NO CAT SELECTED]" id="cat-image" width="480" />
     </div>
 
     <hr />
