LifeGame_各種機能追加

--- a/LifeGame/index.html
+++ b/LifeGame/index.html
@@ -6,8 +6,21 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Life Game</h1>
+    <p>=== === === === ===</p>
     <p>Gen : <span id="gen"></span></p>
+    <p>Life Count : <span id="life-count"></span></p>
+    <p>=== === === === ===</p>
+    <p>
+      Interval : <input type="tel" id="interval-label" /><button
+        id="interval-apply-button"
+      >
+        Apply
+      </button>
+    </p>
     <button id="restart-button">Restart</button>
+    <button id="stop-button">&nbsp;&nbsp;&nbsp;Stop&nbsp;&nbsp;&nbsp;</button>
+    <button id="clear-button">Clear All</button>
 
     <script src="p5.min.js"></script>
     <script src="sketch.js"></script>
