LifeGame_中心部のみLife生成モード搭載

--- a/LifeGame/index.html
+++ b/LifeGame/index.html
@@ -24,6 +24,7 @@
     <button id="restart-button">Restart</button>
     <button id="stop-button">&nbsp;&nbsp;&nbsp;Stop&nbsp;&nbsp;&nbsp;</button>
     <button id="clear-button">Clear All</button>
+    <button id="center-only-button">CenterOnly</button>
 
     <script src="p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
