LifeGame自己紹介_完成

--- a/MyWeb/LifeGame_selfIntro/index.html
+++ b/MyWeb/LifeGame_selfIntro/index.html
@@ -22,9 +22,11 @@
         Apply
       </button>
     </p>
-    <button id="restart-button">Restart</button>
+
     <button id="stop-button">&nbsp;&nbsp;&nbsp;Stop&nbsp;&nbsp;&nbsp;</button>
     <button id="clear-button">Clear All</button>
+    <button id="nakano-button">Nakano_introduce</button>
+    <button id="restart-button">Restart</button>
     <button id="center-only-button">CenterOnly</button>
 
     <script src="p5.min.js"></script>
